Fixed slideshow issues only showing up on mobile phones

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -521,15 +521,31 @@ li span:first-child {
 }
 
 #prev {
-    left: -4rem;
+    left: -4.8rem;
 }
 
 #next {
-    right: -4rem;
+    right: -4.8rem;
 }
 
 .navigation-arrow:hover {
     background-color: var(--ku-light-transparent-25);
+}
+
+@media only screen and (max-width: 576px) {
+    .navigation-arrow {
+        padding: .8rem;
+        top: 55%;
+    }
+    #prev {
+        left: -3.2rem;
+    }
+    #next {
+        right: -3.2rem;
+    }
+    .navigation-arrow:hover {
+        background-color: transparent;
+    }
 }
 
 .navigation-arrow:focus-visible {
@@ -561,8 +577,8 @@ li span:first-child {
     background-color: var(--ku-light-transparent-5);
     border: none;
     cursor: pointer;
-    height: .8rem;
-    width: .8rem;
+    min-height: .8rem;
+    min-width: .8rem;
     border-radius: 100%;
     transition: all .5s ease-in-out;
 }
